# c12-18-m-python

./: .gitignore  README.md  docker-compose.yaml  package-lock.json  pyproject.toml  requirements.txt  run-tests.sh
.github/workflows/: deploy.yml  pylint-black.yml
frontend/: .eslintrc.json  Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.js  layout.jsx  page.js  page.jsx
frontend/testing/: README.MD
server/: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
server/CoreApp/: asgi.py  settings.py  urls.py  wsgi.py
server/appointment/: models.py  serializers.py  urls.py  views.py
server/appointment/migrations/: 0001_initial.py  0002_remove_appointment_availability_and_more.py  0003_alter_appointment_day.py  0004_alter_appointment_service_alter_appointment_user.py  0005_alter_appointment_timetable.py  0006_alter_appointment_timetable.py  0007_alter_appointment_timetable.py
server/services/: __init__.py  models.py  urls.py  views.py
server/services/migrations/: 0001_initial.py  0002_alter_service_description.py  0002_alter_service_price.py  0002_remove_service_precio.py  0003_service_precio.py  0004_remove_service_precio.py
server/user/: models.py  serializers.py  urls.py  views.py
server/user/migrations/: 0001_initial.py  0002_client.py  0003_employee.py  0004_remove_user_role.py  0005_user_role.py  0006_delete_client_delete_employee_remove_user_role_and_more.py  0007_alter_user_password.py
(+89 files in other folders)
