[tool.poetry]
name = "c12-18-m-python"
version = "0.1.0"
description = "Sistema de reservas y pagos para salón de belleza."
authors = ["Jkrox <jkrox@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "c12_18_m_python"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.10.0"
pytest = "^7.4.0"
playwright = "^1.35.0"
pytest-playwright = "^0.3.3"
pre-commit = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
